fixed some css spacing

--- a/source/8-ball/style.css
+++ b/source/8-ball/style.css
@@ -37,6 +37,7 @@ h2, label, .instructions {
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -100px;
 }
 
 /* The black and white ball */
